feat: add authzen properties entity
